--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            python3 -m venv venv
+            python2 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
 
@@ -40,15 +40,12 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
         
       # run tests!
-      # this example uses Django's built-in test-runner
-      # other common Python testing frameworks include pytest and nose
-      # https://pytest.org
-      # https://nose.readthedocs.io
       - run:
           name: run tests
           command: |
-            . venv/bin/activate
-            python manage.py test
+            git clone https://github.com/cBioPortal/cbioportal.git
+            cd core/src/main/scripts/importer
+            validateData.py
 
       - store_artifacts:
           path: test-reports
