--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,8 @@ jobs:
             pip install -r requirements.txt
 
       - save_cache:
+          paths:		
+          - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
         
       # run tests!
