--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
             cd cbioportal/core/src/main/scripts/importer
             ls -la
             ./validateData.py
+            echo "test 123" > /home/circleci/repo/test-reports/abc.txt
 
       - store_artifacts:
           path: test-reports
