--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
             cd cbioportal
             git fetch origin validating-multiple-studies
             git checkout validating-multiple-studies
-            cd .circleci
+            cd ~/repo/.circleci
             mkdir /home/circleci/repo/test-reports
             ./run_tests.sh
 
