--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
             mkdir ~/repo/test-reports
             mkdir ~/repo/test-reports/ERRORS
             # run the tests:
-            ./run_tests.sh
+            ./validate_all.sh
 
       - store_artifacts:
           path: test-reports
